--- a/JOrtho_0.4_freeplane/src/com/inet/jortho/i18n/resource_de.properties
+++ b/JOrtho_0.4_freeplane/src/com/inet/jortho/i18n/resource_de.properties
@@ -1,16 +1,16 @@
-addDictionaries = W?rterb\u00fccher hinzuf\u00fcgen...
-addToDictionary = Zum W?rterbuch hinzuf\u00fcgen
-change = \u00c4ndern
-changeAll = Alle \u00e4ndern
-close = Schlie\u00dfen
-delete = L\u00f6schen
-disable = Keine Pr\u00fcfung
-editDictionary = W\u00f6rterbuch bearbeiten
-ignore = Einmal ignorieren
-ignoreAll = Alle ignorieren
-languages = Sprachen
-msgFinish = Die Rechtschreibpr\u00fcfung ist abgeschlossen.
-notInDictionary = Nicht im W\u00f6rterbuch
-spelling = Rechtschreibung
-suggestions = Vorschl\u00e4ge
-userDictionary = Benutzerw\u00f6rterbuch
+addDictionaries=W?rterb\u00fccher hinzuf\u00fcgen...
+addToDictionary=Zum W?rterbuch hinzuf\u00fcgen
+change=\u00c4ndern
+changeAll=Alle \u00e4ndern
+close=Schlie\u00dfen
+delete=L\u00f6schen
+disable=Keine Pr\u00fcfung
+editDictionary=W\u00f6rterbuch bearbeiten
+ignore=Einmal ignorieren
+ignoreAll=Alle ignorieren
+languages=Sprachen
+msgFinish=Die Rechtschreibpr\u00fcfung ist abgeschlossen.
+notInDictionary=Nicht im W\u00f6rterbuch
+spelling=Rechtschreibung
+suggestions=Vorschl\u00e4ge
+userDictionary=Benutzerw\u00f6rterbuch
