--- a/JOrtho_0.4_freeplane/src/com/inet/jortho/i18n/resource_it.properties
+++ b/JOrtho_0.4_freeplane/src/com/inet/jortho/i18n/resource_it.properties
@@ -1,16 +1,16 @@
-addDictionaries = Aggiungere dizionari
-addToDictionary = Aggiungere al dizionario
-change = Cambiare
-changeAll = Cambiare tutti
-close = Chiudi
-delete = Eliminare
-disable = Disabilitare Controllo
-editDictionary = Modifica Dizionario
-ignore = Ignorare una volta
-ignoreAll = Ignorare tutti
-languages = Lingue
-msgFinish = Controllo ortografico terminato
-notInDictionary = Non nel dizionario
-spelling = Ortografia
-suggestions = Suggerimenti
-userDictionary = Dizionario Utente
+addDictionaries=Aggiungere dizionari
+addToDictionary=Aggiungere al dizionario
+change=Cambiare
+changeAll=Cambiare tutti
+close=Chiudi
+delete=Eliminare
+disable=Disabilitare Controllo
+editDictionary=Modifica Dizionario
+ignore=Ignorare una volta
+ignoreAll=Ignorare tutti
+languages=Lingue
+msgFinish=Controllo ortografico terminato
+notInDictionary=Non nel dizionario
+spelling=Ortografia
+suggestions=Suggerimenti
+userDictionary=Dizionario Utente
