--- a/freeplane/resources/translations/Resources_cs.properties
+++ b/freeplane/resources/translations/Resources_cs.properties
@@ -815,7 +815,7 @@ NewLevelStyleAction.text=P\u0159idat \u00FArove\u0148 stylu
 newmap.install.addon.question={0} se zd\u00E1 b\u00FDt bal\u00ED\u010Dek s dopl\u0148kem\nChcete jej nainstalovat?\n(Zvolte "Ne" pro norm\u00E1ln\u00ED spu\u0161t\u011Bn\u00ED.)
 newmap.install.addon.title=Nainstalovat dopln\u011Bk?
 NewMapAction.text=&Nov\u00E1 mapa
-NewMapViewAction.text=Vytvo\u0159it kopii mapy
+NewMapViewAction.text=Nov\u00FD pohled na mapu
 NewParentNode.text=Nov\u00FD nad\u0159azen\u00FD uzel
 NewParentNode.tooltip=<html>V\u0161echny vybran\u00E9 uzly budou p\u0159i\u0159azen\u00E9 nov\u00E9mu nad\u0159azen\u00E9mu uzlu.</html>
 NewPreviousSiblingAction.text=Nov\u00FD uzel na stejn\u00E9 \u00FArovni nad
