--- a/freeplane/resources/translations/Resources_hu.properties
+++ b/freeplane/resources/translations/Resources_hu.properties
@@ -1,7 +1,13 @@
 AboutAction.text=N\u00E9vjegy
-acceleratorPresets=Hot Key Presets[translate me]
-accessories/plugins/EncryptNode.properties_3=Re-enter Password\:[translate me]
+acceleratorPresets=Gyorsbillenty\u0171-be\u00E1ll\u00EDt\u00E1sok
+accessories/plugins/ApplyFormatPlugin.dialog.title=Elem form\u00E1z\u00E1sa
+accessories/plugins/EncryptNode.properties_0=Jelsz\u00F3 megad\u00E1sa v\u00E9dett (titkos\u00EDtott) elemhez
+accessories/plugins/EncryptNode.properties_1=Nem egyez\u0151 vagy t\u00FAl r\u00F6vid jelsz\u00F3 
+accessories/plugins/EncryptNode.properties_2=Adja meg a jelsz\u00F3t:
+accessories/plugins/EncryptNode.properties_3=Jelsz\u00F3 \u00FAjra:
+accessories/plugins/EncryptNode.properties_4=Adja meg a jelszav\u00E1t.
 accessories/plugins/EncryptNode.properties_6=Rendben
+accessories/plugins/EncryptNode.properties_7=M\u00E9gse
 accessories/plugins/ExportWithXSLT.tooltip=Ez egy egyedi export\u00E1l\u00E1si lehet\u00F5s\u00E9g XSLT szkriptek haszn\u00E1lat\u00E1val.
 accessories/plugins/ExportWithXSLT_HTML.text=Export\u00E1l\u00E1s XHTML-k\u00E9nt (JavaScript verzi\u00F3)
 accessories/plugins/ExportWithXSLT_HTML3.text=Export\u00E1l\u00E1s XHTML-k\u00E9nt (m\u00E1sik verzi\u00F3, felh\u00F5kkel \u00E9s linkekkel)
@@ -103,7 +109,7 @@ FoldAllAction.text=Minden behajt\u00E1sa
 FoldAllAction.tooltip=<html>Behajtja a kijel\u00F6lt elemeket a gyerekeikkel egy\u00FCtt.</html>
 FoldOneLevelAction.text=Egy szint behajt\u00E1sa
 FoldOneLevelAction.tooltip=<html>A kijel\u00F6lt elemeket hajtja be egy szinttel beljebb.</html>
-follow_graphical_link=Go to\:[translate me]
+follow_graphical_link=Go to:[translate me]
 font=Bet\u0171
 FontFamilyAction.text=bet\u0171csal\u00E1d
 FontSizeAction.text=bet\u0171m\u00E9ret
@@ -356,7 +362,7 @@ simplyhtml.replaceNo=Nem
 simplyhtml.replaceYes=Igen
 simplyhtml.styleLabel=St\u00EDlus
 simplyhtml.tableDialogTitle=Format Table[translate me]
-simplyhtml.topLabel=top\:[translate me]
+simplyhtml.topLabel=top:[translate me]
 simplyhtml.uLineLabel=Al\u00E1h\u00FAz\u00E1s
 simplyhtml.undoLabel=Visszavon\u00E1s
 split=Sz\u00E9tv\u00E1g\u00E1s
