--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -776,7 +776,7 @@ menu_viewmode=Param\u00E8tres d'affichage
 MenuUtils.invalid_menuitem={0} n''est pas valide
 mindmap=Carte
 MindMapNodesFlavorHandler=Avec mise en forme
-mindmaps=Carte
+mindmaps=Cartes
 mindmaps_desc=Cartes (*.mm)
 mindmaps_filter_desc=Filtre (*.mmfilter)
 MinNodeWidth.text=Largeur minimale du n\u0153ud
