--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -251,7 +251,7 @@ dialect_info.app=Le fichier {0} a \u00E9t\u00E9 cr\u00E9\u00E9e avec le logiciel
 dialect_info.later_version=La carte {0} a \u00E9t\u00E9 cr\u00E9\u00E9e avec une version plus r\u00E9cente du programme.
 dialect_info.unknownApp=Le format du fichier "{0}" n''est pas connu de Freeplane.
 dialect_info.unknownURL=Aucune aide n'est disponible sur Internet.
-dialect_info.url=Visiter la page web du programme {0} pour plus d''informations
+dialect_info.url=Pour plus d''information, visitez le site web {0}.
 dialect_info.warning=Freeplane ne parvient pas \u00E0 ouvrir, afficher ou enregistrer la carte.
 DirectHtmlFlavorHandler=Coller en HTML comme un seul n\u0153ud
 DocumentationAction.text=Documentation
@@ -355,7 +355,7 @@ ExtractLinkFromTextAction.tooltip=Cr\u00E9er un lien hypertext \u00E0 partir du 
 f_button_unassigned=<aucune action>
 FaqOpenURLAction.text=Foire aux questions (FAQ)
 file=&Fichier
-file_already_exists=Le fichier {0} existe d\u00E9j\u00E0. Voulez-vous le remplacer ?
+file_already_exists=Le fichier {0} existe d\u00E9j\u00E0. Souhaitez-vous le remplacer ?
 file_not_found=Le fichier {0} n''a pas \u00E9t\u00E9 trouv\u00E9
 FileListFlavorHandler=Liens vers des fichiers
 FileProperties_BranchLeafCount=Nombre de n\u0153uds de dernier niveau dans les branches s\u00E9lectionn\u00E9es :
@@ -724,7 +724,7 @@ ManageAddOnsDialog.tab.manage.tooltip=G\u00E9rer les add-ons
 ManageAddOnsDialog.visit.addon.page=Ouvrir le site web des add-ons...
 ManageConditionalStylesAction.text=Styles conditionnels de carte...
 ManageNodeConditionalStylesAction.text=Styles conditionnels de n\u0153ud...
-map_already_exists=La carte existe d\u00E9j\u00E0. Souhaitez-vous vraiment la remplacer ?
+map_already_exists=Le fichier existe d\u00E9j\u00E0. Souhaitez-vous le remplacer ?
 map_corrupted=Carte corrompue. Afficher d'avantage ?
 map_load_error=Impossible d''ouvrir le fichier {0}
 map_locked_by_open=La carte {0} est en cours d''utilisation par l''utilisateur {1}. Ouverture en lecture-seule.
@@ -1256,7 +1256,7 @@ OptionPanel.structured_html_import=Import HTML comme structure de n\u0153uds
 OptionPanel.structured_icon_toolbar=Organiser la barre d'ic\u00F4nes
 OptionPanel.summary=Synth\u00E8se
 OptionPanel.sv=Su\u00E9dois
-OptionPanel.text.use_ctrl_key=Pour d\u00E9finir un raccourci clavier, utilisez 'Cr\u00E9er un nouveau raccourci...' dans le menu 'Outils'.
+OptionPanel.text.use_ctrl_key=Pour d\u00E9finir un raccourci clavier, utilisez la commande "Cr\u00E9er un nouveau raccourci..." disponible dans le menu "Outils".
 OptionPanel.time_for_automatic_save=Fr\u00E9quence de sauvegarde automatique (en millisecondes)
 OptionPanel.time_for_automatic_save.tooltip=Intervalle entre deux sauvegardes automatiques (en millisecondes). Pour d\u00E9sactiver la sauvegarde automatique, saisir 2 000 000 000.
 OptionPanel.time_for_delayed_selection=D\u00E9lai pour la s\u00E9lection
@@ -1301,7 +1301,7 @@ org.freeplane.plugin.bugreport.lastreport=Le dernier rapport re\u00E7u
 org.freeplane.plugin.bugreport.never=Ne jamais demander
 org.freeplane.plugin.bugreport.question=Freeplane propose de signaler les erreurs aux \u00E9quipes de d\u00E9veloppement. Aucune donn\u00E9e personnelle ni le moindre contenu de vos cartes ne sera transmis.\nL'envoi de rapports d'erreur permet, ensemble, d'am\u00E9liorer Freeplane.
 org.freeplane.plugin.bugreport.report=Rapport d\u00E9taill\u00E9 de l'erreur
-org.freeplane.plugin.bugreport.wanted_bug=Une erreur interne s'est produite et a \u00E9t\u00E9 report\u00E9e automatiquement.\nNous souhaiterions plus d'informations afin de reproduire ce comportement inattendu.\nAidez-nous en cr\u00E9ant un rapport d'erreur dans Mantis, notre banque de bogues :\nexpliquez ce que vous faisiez au moment o\u00F9 l'erreur s'est produite, afin de nous donner une chance de reproduire le bogue.\n\nAppuyez sur Valider pour ouvrir la banque de bogues dans votre navigateur.\n\nMerci de nous aider \u00E0 r\u00E9soudre ce probl\u00E8me.\nVotre \u00E9quipe Freeplane
+org.freeplane.plugin.bugreport.wanted_bug=Une erreur interne s'est produite.\nNous souhaiterions plus d'informations afin de reproduire ce comportement inattendu.\nAidez-nous en signalant l'erreur dans Mantis, notre outil de suivi des anomalies :\nexpliquez ce que vous faisiez au moment o\u00F9 l'erreur s'est produite, afin de nous donner une chance de reproduire et de corriger cette erreur.\n\nAppuyez sur Valider pour ouvrir l'outil de signalement de bogues dans votre navigateur.\n\nMerci de nous aider \u00E0 r\u00E9soudre ce probl\u00E8me.\n\nL'\u00E9quipe Freeplane
 org.freeplane.plugin.script.NodeIdHighlighter.node_is_not_defined=Le n\u0153ud {0} n''est pas d\u00E9fini
 out_of_memory=M\u00E9moire insuffisante
 overwrite_keyset_question=Il existe d\u00E9j\u00E0 un enregistrement portant ce nom. Remplacer l'enregistrement existant ?
