--- a/freeplane/resources/translations/Resources_nl.properties
+++ b/freeplane/resources/translations/Resources_nl.properties
@@ -1055,7 +1055,7 @@ OptionPanel.lookandfeel.tooltip=<html> De gebruiksomgeving waarin je wil werken.
 OptionPanel.lt=Lithuanian / Kalba
 OptionPanel.max_displayed_node_count=Maximum aantal zichtbare knopen
 OptionPanel.max_image_width=Maximum beginbreedte afbeelding
-OptionPanel.max_image_width.tooltip=Nieuwe afbeeldingen verkleind tot deze breedte
+OptionPanel.max_image_width.tooltip=Nieuwe afbeeldingen verkleind tot deze breedte 
 OptionPanel.max_menu_item_count=Maximum aantal menu's
 OptionPanel.max_menu_item_count.tooltip=Beperken aantal items per submenu, minimaal 10
 OptionPanel.max_node_width=Maximum knoopbreedte
@@ -1094,7 +1094,7 @@ OptionPanel.org.freeplane.plugin.bugreport=Beleid
 OptionPanel.org.freeplane.plugin.bugreport.allowed=Altijd verzenden
 OptionPanel.org.freeplane.plugin.bugreport.ask=Tonen dialoog voor foutenmelding
 OptionPanel.org.freeplane.plugin.bugreport.denied=Nooit verzenden
-OptionPanel.org.freeplane.plugin.bugreport.userid=Optional identifier to be sent
+OptionPanel.org.freeplane.plugin.bugreport.userid=Te verzenden gebruikers-ID (optioneel) 
 OptionPanel.outline_hgap=Horizontale afstand
 OptionPanel.outline_vgap=Verticale afstand
 OptionPanel.paint_connectors_behind=Tekenen verbinding achter knopen
