--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -769,6 +769,7 @@ menu_nodes=&Nodes
 menu_nodeView=Node core
 menu_notes=Note
 menu_noteView=Notes
+menu_openmaps=Maps
 menu_progress=Progress icon (%)
 menu_remove_icons=Remove icons
 menu_removeAttribute=Remove attribute
