--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -1,6 +1,6 @@
 about_text=Freeplane - freie Software f\u00FCr Mindmaps und Wissensaufbau
 AboutAction.text=\u00DCber Freeplane...
-acceleratorPresets=&HotKey
+acceleratorPresets=&Tastaturk\u00FCrzel-Einstellungen
 accelerators_loading_error=Fehler beim Laden der Tastaturk\u00FCrzel in {0}.
 accessories/plugins/ApplyFormatPlugin.dialog.title=Format der Knoten \u00E4ndern
 accessories/plugins/AutomaticLayout.properties_StyleDialogTitle=Stil \u00E4ndern
@@ -49,7 +49,7 @@ addons.installer.freeplaneversion.format.error=Formatfehler in {0} (Wert: {1})
 addons.installer.groovy.script.name=Der Skript-Name {0} endet nicht auf ".groovy"
 addons.installer.html.script=Skripttext darf nicht HTML-formatiert sein
 addons.installer.install=Installieren
-addons.installer.invalid.keyboard.shortcut=Ung\u00FCltiger Shortcut {0}.
+addons.installer.invalid.keyboard.shortcut=Ung\u00FCltiges Tastaturk\u00FCrzel {0}.
 addons.installer.licence.unchanged=Lizenz ist unver\u00E4ndert
 addons.installer.map.structure=Fehlerhafte Mindmap-Struktur: {0}
 addons.installer.missing.child.nodes=Fehlende Unterknoten: {0}
@@ -107,8 +107,8 @@ attributes_attribute=Attribute
 attributes_close=Schlie\u00DFen
 attributes_deselect_all=Nichts
 attributes_dialog_title=Attribute verwalten
-attributes_edit=Editieren
-attributes_edit_tooltip=Attribute editieren
+attributes_edit=Bearbeiten
+attributes_edit_tooltip=Attribute bearbeiten
 attributes_for_selected=A&usgew\u00E4hlte Knoten
 attributes_for_visible=Alle &sichtbaren Knoten
 attributes_import=&Importieren
@@ -116,7 +116,7 @@ attributes_import_tooltip=Attribute aus anderen geladenen Mindmaps Importieren
 attributes_no_import_candidates_found=Keine neue Attribute gefunden
 attributes_popup_delete=Entfernen
 attributes_popup_down=Nach Unten
-attributes_popup_edit=Editieren
+attributes_popup_edit=Bearbeiten
 attributes_popup_hide=Verstecken
 attributes_popup_new=Neues Attribut
 attributes_popup_optimal_width=Optimale Breite
@@ -165,7 +165,7 @@ can_not_connect_to_info_server=Verbindung zu Informations-Server nicht m\u00E4gl
 can_not_delete_predefined_style=Standard Knotenstile k\u00F6nnen nicht gel\u00F6scht werden.
 can_not_delete_root_style=Der Knotenstil des Wurzelknotens kann nicht gel\u00F6scht werden.
 can_not_delete_style_group=Diese Gruppe von Knotenstilen kann nicht gel\u00F6scht werden.
-can_not_save_key_set=Kann HotKeys nicht speichern
+can_not_save_key_set=Kann Tastaturk\u00FCrzel nicht speichern
 cancel=&Abbrechen
 CancelAction.text=&Abbrechen
 cannot_add_parent_diff_parents=Alle Knoten m\u00FCssen zum selben Oberknoten geh\u00F6ren, um diese Funktion auszuf\u00FChren.
@@ -214,14 +214,14 @@ connector_label=Beschriftung des Konnektors
 connector_lines=Konnektor &Linien
 connector_shapes=Konnektor &Formen
 ConnectorColorAction.text=Farbe des Konnektors
-CopyAction.text=&Selektion
+CopyAction.text=&Kopieren
 CopyAction.tooltip=Kopiert den markierten Knoten und seine Nachfolger
 CopyAttributes.text=Attribute kopieren
-CopyIDAction.text=Knoten-I&D
+CopyIDAction.text=Knoten-I&D kopieren
 CopyMapStylesAction.text=Knotenstile importieren...
-CopyNodeURIAction.text=Knoten-&URI
+CopyNodeURIAction.text=Knoten-&URI kopieren
 copyright=Copyright \u00A9 2000-2012 Freeplane Entwicklungsteam und andere
-CopySingleAction.text=Knoten-&Inhalt
+CopySingleAction.text=kop&ieren (einzeln)
 CopySingleAction.tooltip=Kopiert nur den markierten Knoten
 CopyStyleExtensionsAction.text=Erweiterungen des Stilknotens einf\u00FCgen
 corrupt_map=Die Datei ist besch\u00E4digt.
@@ -296,7 +296,7 @@ edit_target_label=Text am Ende
 edit_transparency_label=Transparenz
 edit_width_label=Breite
 EditAction.text=Text &bearbeiten...
-EditAttributesAction.text=&Attribute editieren...
+EditAttributesAction.text=&Attribute bearbeiten...
 EditDetailsAction.text=Details &bearbeiten...
 EditDetailsInDialogAction.text=Details im Editor bearbeiten...
 EditFilterAction.text=&Editieren...
@@ -309,12 +309,12 @@ EncryptedMap.tooltip=Erzeugt eine neue Mindmap die als ganzes verschl\u00FCsselt
 enter_base_url=Freeplane wird realtive Links einf\u00FCgen. Bitte geben sie die Basis-URL an.
 enter_condition_name=Name f\u00FCr neue Bedingung zuweisen
 enter_confirms=&Eingabetaste Schlie\u00DFt das Fenster.
-enter_keyset_name=Bitte geben sie einen Namen f\u00FCr das Hot-Key-Set an
+enter_keyset_name=Bitte geben sie einen Namen f\u00FCr die Tastaturk\u00FCrzel-Sammlung an
 enter_map_url=Bitte die URL der Mindmap eingeben
 enter_new_style_name=Name f\u00FCr neuen Knotenstil
 enter_node_id=Konten ID eingeben
 enter_zoom=Vergr\u00F6\u00DFerung bearbeiten
-EnterPassword.text=Knoten ver- / ent&schl\u00FCsseln...
+EnterPassword.text=Knoten ver-/ent&schl\u00FCsseln...
 error=Fehler
 error_applying_template=Beim Anwenden des XSL-Template ist ein Fehler aufgetreten
 error_creating_directory=Beim Erstellen des Verzeichnisses f\u00FCr den Export ist ein Fehler aufgetreten.
@@ -395,7 +395,7 @@ filter_delete=&Entfernen
 filter_details=Details
 filter_dialog=Filter definieren
 filter_does_not_exist=Fehlt
-filter_edit_description=Filterliste editieren
+filter_edit_description=Filterliste bearbeiten
 filter_enter_value=Einen Wert eingeben
 filter_even_level=Knoten einer geraden Ebene
 filter_exist=existiert
@@ -471,7 +471,7 @@ formula.menuname=&Formeln
 formula_editor=Formel bearbeiten
 ForwardAction.text=Sprung zum Nachfolger-Knoten
 ForwardAction.tooltip=<html>Springt zum n\u00E4chstfolgenden Knoten der<br/>Selektions-Historie der aktuellen Mindmap</html>
-FreeNodeAction.text=&Freie Knotenpositionierung
+FreeNodeAction.text=&Frei positionierter Knoten
 Freeplane.progress.buildScreen=Bildschirm aufbauen...
 Freeplane.progress.createController=Controller erzeugen...
 Freeplane.progress.createInitialMode=Initialen Modus erzeugen...
@@ -496,7 +496,7 @@ GrabKeyDialog.grab-key.assigned-to.none=Nicht zugewiesen
 GrabKeyDialog.grab-key.clear=L\u00F6schen
 GrabKeyDialog.grab-key.remove=Entfernen
 GrabKeyDialog.grab-key.remove-ask=Sind Sie sicher, dass Sie diese Tastenzuweisung entfernen m\u00F6chten?
-GrabKeyDialog.grab-key.title=Neuen ShortCut zuweisen
+GrabKeyDialog.grab-key.title=Neues Tastaturk\u00FCrzel zuweisen
 green=Gr\u00FCn
 help=&Hilfe
 HideableAction.tooltip=<html>Markiert jeden ge\u00E4nderten Knoten mit einer definierbaren Hintergrundfarbe.</html>
@@ -504,9 +504,9 @@ HideAllAttributesAction.text=Alle &verbergen
 HierarchicalIcons2Action.text=&Schnittmenge der Icons aller Unterknoten bilden
 HierarchicalIconsAction.text=&Vereinigung der Icons aller Unterknoten bilden
 HierarchicalIconsAction.tooltip=<html>Oberknoten zeigt jeweils alle Icons, die von den Unterknoten<br>verwendet werden, als verkleinterte eigene Icons an</html>
-hot_keys=HotKeys
-hot_keys_table=Tabelle der HotKeys
-HotKeyInfoAction.text=&HotKey-\u00DCbersicht...
+hot_keys=Tastaturk\u00FCrzel
+hot_keys_table=Tabelle der Tastaturk\u00FCrzel
+HotKeyInfoAction.text=&Tastaturk\u00FCrzel-\u00DCbersicht...
 html_export_based_on_headings=HTML-Export - \u00DCberschriftenbasiert
 html_export_fold_all=HTML-Export - alles eingeklappt
 html_export_fold_currently_folded=HTML-Export - mit aktueller Faltung
@@ -681,7 +681,7 @@ link_error=Falscher Link "{0}"  kann nicht geladen werden
 link_not_available_any_more=Die Verkn\u00FCpfung ist nicht mehr g\u00FCltig, da der Zielknoten in der Zwischenzeit gel\u00F6scht wurde.
 link_not_found=Link {0} nicht gefunden.
 load=&Laden
-load_accelerator_presets=Laden
+load_accelerator_presets=Sammlung laden
 LoadAcceleratorPresetsAction.textPatterns.text=Text Muster
 locking_failed_by_open=Die Mindmap {0} ist in Benutzung. Daher wird sie schreibgesch\u00FCtzt ge\u00F6ffnet.
 locking_failed_by_save_as=Die Mindmap {0} ist in Benutzung. Daher wurde die Aktion "Speichern unter..." abgebrochen.
@@ -727,8 +727,8 @@ ManageAddOnsDialog.tab.manage.themes=Themen
 ManageAddOnsDialog.tab.manage.themes.tooltip=Verwaltung installierter Themen
 ManageAddOnsDialog.tab.manage.tooltip=Installierte Add-ons verwalten...
 ManageAddOnsDialog.visit.addon.page=Add-on Seite besuchen...
-ManageConditionalStylesAction.text=&Bedingte Formatierung (allgemein)...
-ManageNodeConditionalStylesAction.text=Bedingte Formatierung (f\u00FCr Knoten)...
+ManageConditionalStylesAction.text=&Bedingte Formatierung f\u00FCr die Map...
+ManageNodeConditionalStylesAction.text=Bedingte Formatierung f\u00FCr den Knoten...
 map_already_exists=Die Mindmap existiert bereits. Soll sie \u00FCberschrieben werden?
 map_corrupted=Die Mindmap ist nicht lesbar. M\u00F6chten Sie die Details sehen?
 map_load_error=Mindmap {0} konnte nicht geladen werden
@@ -752,7 +752,7 @@ menu_file_import=Zweig i&mportieren
 menu_filter=F&ilter
 menu_format=&Format
 menu_group=&Gruppierung
-menu_hoverView=ToolTips
+menu_hoverView=Tooltips
 menu_iconByCategory=Icons nach Kategorie
 menu_iconView=Icons
 menu_image=Bild
@@ -920,7 +920,7 @@ OptionPanel.bezier=Bezier
 OptionPanel.bubble=Blase
 OptionPanel.ca=Katalan, Valencian / Catal\u00E0
 OptionPanel.Cancel=Abbrechen
-OptionPanel.center_selected_node=Selektierte Knoten zentrieren
+OptionPanel.center_selected_node=Selektierten Knoten automatisch zentrieren
 OptionPanel.check_updates_automatically=Automatisch nach Updates suchen
 OptionPanel.childpattern=Stil der Unterknoten
 OptionPanel.childpattern.tooltip=<html>Dieser Stil wird auf alle Unterknoten des Knotens angewendet.<br>Es werden mehrere Ebenen gleichzeitig ver\u00E4ndert!</html>
@@ -1047,7 +1047,7 @@ OptionPanel.language=Sprache
 OptionPanel.language.tooltip=<html>Dies ist die Sprache, die im Programm verwendet wird. 'Automatisch' bedeutet, dass die Sprache des Benutzers geladen wird, soweit vorhanden.</html>
 OptionPanel.last=Am Ende
 OptionPanel.last_opened_list_length=Anzahl der zuletzt ge\u00F6ffneten Dateien unter Datei -> Zuletzt ge\u00F6ffnete Dateien
-OptionPanel.layout_map_on_text_change=Mindmap w\u00E4hrend des editierens aktualisieren
+OptionPanel.layout_map_on_text_change=Mindmap w\u00E4hrend des Bearbeitens aktualisieren
 OptionPanel.layout_map_on_text_change.tooltip=F\u00FCr h\u00F6here Geschwindigkeit ausschalten
 OptionPanel.linear=Linear
 OptionPanel.links=Links
@@ -1126,7 +1126,7 @@ OptionPanel.pt_BR=Protugiesisch (Brasilien)/ Portugu\u00EAs (Brasil)
 OptionPanel.pt_PT=Portugiesisch (Portugal) / Portugu\u00EAs (Portugal)
 OptionPanel.RECT=Rechteck
 OptionPanel.relative=Relativ
-OptionPanel.remind_type_of_new_nodes.tooltip=<html><ul><li>"Nachfragen" fr\u00E4gt nach</li><li></html>"Ja" zeigt den Richt-Text editor an</li><li>"Nein" verwendet den einfachen Text Editor</li></ul></html>
+OptionPanel.remind_type_of_new_nodes.tooltip=<html><ul><li>"Nachfragen" fr\u00E4gt nach</li><li></html>"Ja" zeigt den Richt-Text-Editor an</li><li>"Nein" verwendet den einfachen Text-Editor</li></ul></html>
 OptionPanel.remind_use_rich_text_in_new_nodes=F\u00FCr eingef\u00FCgte Knoten erweiterte Formatierung verwenden
 OptionPanel.remove_notes_without_question=Notizen ohne Nachfrage l\u00F6schen
 OptionPanel.remove_notes_without_question.tooltip=<html>Wenn diese Option gew\u00E4hlt ist, werden die Notizen des Knotens ohne Warnung gel\u00F6scht.<br><b> Dies kann bei unbeabsichtigtem L\u00F6schen zu Datenverlust f\u00FChren!</b></html>
@@ -1198,7 +1198,7 @@ OptionPanel.separator.other_defaults=Andere Standards
 OptionPanel.separator.others=Andere Tastenkombinationen
 OptionPanel.separator.outline_view=Gliederungsansicht
 OptionPanel.separator.patterns=Stile
-OptionPanel.separator.RichTextEditor=Rich-Text Editor
+OptionPanel.separator.RichTextEditor=Rich-Text-Editor
 OptionPanel.separator.root_node_appearance=Stil des Wurzel-Knotens
 OptionPanel.separator.save=Speichern
 OptionPanel.separator.scripting=Skripte
@@ -1264,7 +1264,7 @@ OptionPanel.structured_html_import=Importiere HTML als Knotenhierarchie
 OptionPanel.structured_icon_toolbar=Strukturierte Icon-Toolbar
 OptionPanel.summary=Zusammenfassung
 OptionPanel.sv=Schwedisch / svenska
-OptionPanel.text.use_ctrl_key=<html>Um den Programm-Funktionen einen ShortCut zuzuweisen,<br> verwende die Men\u00fcfunktion "Extras -> ShortCut zuweisen"</html>
+OptionPanel.text.use_ctrl_key=<html>Um den Programm-Funktionen ein Tastaturk\u00FCrzel zuzuweisen,<br> verwende die Men\u00fcfunktion "Extras -> Tastaturk\u00FCrzel zuweisen"</html>
 OptionPanel.time_for_automatic_save=Zeitabstand f\u00fcr automatisches Speichern (in Millisekunden)
 OptionPanel.time_for_automatic_save.tooltip=<html>Legt die Zeit zwischen zwei aufeinanderfolgenden automatischen Speicherungen in Millisekunden fest <br>Wenn Sie diese Funktion deaktivieren wollen, dann setzen Sie die Zeit auf 200.00.00.000.</html>
 OptionPanel.time_for_delayed_selection=Zeit f\u00fcr die verz\u00f6gerte Auswahl (in Millisekunden)
@@ -1312,7 +1312,7 @@ org.freeplane.plugin.bugreport.report=Derzeitiger Report
 org.freeplane.plugin.bugreport.wanted_bug=Ein Fehler ist aufgetreten und wurde automatisch weitergemeldet.\nWir brauchen aber noch mehr Informationen, um dieses unerwartete Verhalten reproduzieren zu k\u00F6nnen.\n\nBitte helfen Sie uns dabei, indem Sie einen Fehlerbericht in userem Mantis-Fehlerverfolgungstool eingeben.\nErkl\u00E4ren Sie auch, was Sie getan haben, als der Fehler auftrat, so dass wir Ihn reproduzieren k\u00F6nnen.\n\nWenn Sie OK dr\u00FCcken, wird automatisch das Fehlerverfolgunstool in Ihrem Web-Browser ge\u00F6ffnet.\n\nDanke, dass Sie dabei helfen Freeplane besser zu machen!\nIhr Freeplane Team.
 org.freeplane.plugin.script.NodeIdHighlighter.node_is_not_defined=Der Knoten {0} ist nicht definiert
 out_of_memory=Zu wenig Speicher.
-overwrite_keyset_question=Soll existierendes Keyset \u00FCberschrieben werden?
+overwrite_keyset_question=<html>Es existiert bereits eine Tastaturk\u00FCrzel-Sammlung mit diesem Namen.<br/>Soll sie \u00FCberschrieben werden?</html>
 PageAction.text=Seite einr&ichten...
 password_is_not_ascii=Passwort ist nicht im ASCII-Format
 PasteAction.text=Einf&\u00FCgen
@@ -1345,7 +1345,7 @@ plugins/ScriptEditor.FORBIDDEN_ACTION=In Freeplane sind Groovy Skripte eingeschr
 plugins/ScriptEditor.menu_actions=&Aktionen
 plugins/ScriptEditor.new_script=&Neues Script
 plugins/ScriptEditor.run=&Starten
-plugins/ScriptEditor.sign=Skript S&ignieren...
+plugins/ScriptEditor.sign=Skript s&ignieren...
 plugins/ScriptEditor/window.Result=Ergebnis:
 plugins/ScriptEditor/window.title=Skripteditor
 plugins/ScriptingEngine.illegalAccessToInternalAPI=Unerlaubter Zugriff auf das interne API (Paket {0}). Bitte kontaktieren Sie das Freeplane-Team, falls Sie den Zugriff ben\u00F6tigen.
@@ -1423,19 +1423,19 @@ rename=&Umbenennen
 repair_link=Link reparieren?
 repair_link_question=Die Mindmap konnte nicht gefunden werden. Link von Hand reparieren?
 replace=Ersetzen
-replace_shortcut_question=Dieser Shortcut ist bereits zugewiesen an:\n{0}\nSoll die Zuweisung ge\u00E4ndert werden?
-replace_shortcut_title=Shortcut ersetzen?
+replace_shortcut_question=Dieses Tastaturk\u00FCrzel ist bereits zugewiesen an:\n{0}\nSoll die Zuweisung ge\u00E4ndert werden?
+replace_shortcut_title=Tastaturk\u00FCrzel ersetzen?
 ReportBugAction.text=&Fehler melden...
 RequestFeatureAction.text=&Verbesserungsvorschlag machen...
 reset_to_default=Default benutzen
 ResetNodeLocationAction.text=&Position zur\u00FCcksetzen
 ResetStyleAction.text=Knotenstil zur\u00FCcksetzen
-RevertAction.text=Wieder&herstellung aus lokaler Historie...
+RevertAction.text=Wieder&herstellen aus lokaler Historie...
 RevisionPluginAction.text=&\u00C4nderungen markieren
 save_failed=Der Versuch, {0} zu speichern, ist fehlgeschlagen.
 save_unsaved=Soll die folgende Mindmap gespeichert werden? :
 save_unsaved_styles=Knotenstile speichern?
-SaveAcceleratorPresetsAction.text=Satz speichern...
+SaveAcceleratorPresetsAction.text=Sammlung speichern...
 SaveAction.text=&Speichern
 SaveAll.text=&Alle speichern...
 SaveAll.tooltip=Speichert alle ge\u00F6ffneten Mindmaps
@@ -1467,10 +1467,10 @@ selection_method_delayed=Verz\u00F6gerte automatische Selektion
 selection_method_direct=Mausber\u00FChrung selektiert
 SelectNoteAction.text=&Wechsel Notiz<->Knoten
 SelectNoteAction.tooltip=Wechselt vom bzw. zum Notiz-Editor
-set_accelerator_on_next_click_action=Auf einen Men\u00fceintrag klicken, um ShortCut zuzuweisen
-SetAccelerator.dialogTitle=Hotkeys zuweisen
+set_accelerator_on_next_click_action=Klicken sie auf den Men\u00fceintrag, der dem Tastaturk\u00FCrzel zugewiesen werden soll.
+SetAccelerator.dialogTitle=Tastaturk\u00FCrzel zuweisen
 SetAccelerator.keystrokeDetected=Tastaturk\u00fcrzel {0} ist keinem Men\u00fceintrag zugeordnet.
-SetAcceleratorOnNextClickAction.text=ShortCut &zuweisen...
+SetAcceleratorOnNextClickAction.text=Tastaturk\u00FCrzel &zuweisen...
 SetImageByFileChooserAction.text=Bildver&kn\u00FCpfung erstellen...
 SetLinkAnchorAction.text=Setze &Anker
 SetLinkAnchorAction.tooltip=<html>setzt aktuellen Knoten als Bezugspunkt von dem aus<br/>bzw. zu dem ein lokaler bzw. datei\u00FCbergreifender<br/>Hyperlink erstellt werden kann.</html>
@@ -1543,7 +1543,7 @@ simplyhtml.deleteTableColLabel=Spalte l\u00F6schen
 simplyhtml.deleteTableRowLabel=Zeile l\u00F6schen
 simplyhtml.docTitleQuery=Neuer Titel:
 simplyhtml.docTitleTitle=Dokumenttitel bearbeiten
-simplyhtml.editLabel=Editieren
+simplyhtml.editLabel=Bearbeiten
 simplyhtml.effectLabel=Effekt
 simplyhtml.familyLabel=Familie
 simplyhtml.findNext=Suchen...
@@ -1725,14 +1725,14 @@ TimeListAction.tooltip=Zeigt alle Wiedervorlagezeiten und die dazugeh\u00F6rigen
 TimeManagementAction.text=&Kalender anzeigen...
 TimeManagementAction.tooltip=<html>Zeigt das Kalender Modul von Kai Toedter.</html>
 ToggleChildrenFoldedAction.text=&Unterknoten falten/entfalten
-ToggleDetailsAction.text=Knotendetails Ein-/Ausblenden
+ToggleDetailsAction.text=Knotendetails ein-/ausblenden
 ToggleFBarAction.text=F-&Tasten
 ToggleFoldedAction.text=Knoten &falten/entfalten
 ToggleFullScreenAction.text=&Vollbildmodus
 ToggleLeftToolbarAction.text=&Icons
 ToggleMenubarAction.text=&Men\u00fc
 ToggleScrollbarsAction.text=Rollbalken
-ToggleStatusAction.text=Statuszeile anzeigen
+ToggleStatusAction.text=Statuszeile
 ToggleToolbarAction.text=&Werkzeuge
 undefined_error=Ein unerwarteter Fehler ist aufgetreten. Eine Fehlernachricht im Forum w\u00E4re sch\u00F6n.
 underline=Unterstrich
@@ -1752,7 +1752,7 @@ UpdateCheckAction.text=Auf &Updates pr\u00FCfen...
 updatecheckdialog=Updatepr\u00FCfung
 url_error=Diese URL ist fehlerhaft!
 url_open_error=Die URL {0} konnte nicht geladen werden.
-used_in_menu=Dieser Shortcut kann nicht gesetzt werden, da er bereits im Men\u00FC verwendet wird.
+used_in_menu=Dieses Tastaturk\u00FCrzel kann nicht gesetzt werden, da es bereits im Men\u00FC verwendet wird.
 UsePlainTextAction.text=Nur reiner &Text
 user_config_folder=Benutzerkonfiguration: {0}
 user_defined_filters=Benutzerdefinierte Filter
