--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -23,12 +23,12 @@ accessories/plugins/ExportWithXSLT_Applet.tooltip=Java \u30D6\u30E9\u30A6\u30B6\
 accessories/plugins/ExportWithXSLT_Flash.text=Flash \u306B
 accessories/plugins/ExportWithXSLT_Flash.tooltip=Flash \u30A2\u30D7\u30EA\u30B1\u30FC\u30B7\u30E7\u30F3\u5F62\u5F0F\u3067\u66F8\u304D\u51FA\u3057\u307E\u3059\u3002
 accessories/plugins/ExportWithXSLT_HTML.text=XHTML\uFF08JavaScript\u7248\uFF09\u306B
-accessories/plugins/ExportWithXSLT_HTML3.text=XHTML\uFF08\u30AF\u30EA\u30C3\u30AB\u30D6\u30EB\u30DE\u30C3\u30D7\u7248\uFF09\u306B...
+accessories/plugins/ExportWithXSLT_HTML3.text=XHTML\uFF08\u30AF\u30EA\u30C3\u30AB\u30D6\u30EB\u30DE\u30C3\u30D7\u7248\uFF09\u306B
 accessories/plugins/ExportWithXSLT_RESOURCESTJI.text=\u30EA\u30BD\u30FC\u30B9\u3092 RESOURCES \u30CE\u30FC\u30C9\u304B\u3089 Taskjuggler \u30D5\u30A1\u30A4\u30EB\u306B
 accessories/plugins/ExportWithXSLT_RESOURCESTJI.tooltip=<html>\u30EA\u30BD\u30FC\u30B9\u3092 RESOURCES \u30CE\u30FC\u30C9\u304B\u3089 Taskjuggler \u30E2\u30B8\u30E5\u30FC\u30EB\u306B\u66F8\u304D\u51FA\u3057\u307E\u3059\u3002</html>
 accessories/plugins/ExportWithXSLT_TASKSTJI.text=\u30BF\u30B9\u30AF\u3092 TASKS \u30CE\u30FC\u30C9\u304B\u3089 TaskJuggler \u30D5\u30A1\u30A4\u30EB\u306B
 accessories/plugins/ExportWithXSLT_TASKSTJI.tooltip=<html>\u30BF\u30B9\u30AF\u3092 TASKS \u30CE\u30FC\u30C9\u304B\u3089 Taskjuggler \u30E2\u30B8\u30E5\u30FC\u30EB\u306B\u66F8\u304D\u51FA\u3057\u307E\u3059\u3002</html>
-action_keystroke_in_use_error={1} \u306E\u52D5\u4F5C\u7528\u306E\u30AD\u30FC\u8A2D\u5B9A  {0} \u306F\u3001\u3059\u3067\u306B {2} \u306E\u52D5\u4F5C\u7528\u306B\u4F7F\u308F\u308C\u3066\u3044\u307E\u3059\u3002
+action_keystroke_in_use_error={1} \u306E\u52D5\u4F5C\u7528\u306E\u30AD\u30FC\u8A2D\u5B9A {0} \u306F\u3001\u3059\u3067\u306B {2} \u306E\u52D5\u4F5C\u7528\u306B\u4F7F\u308F\u308C\u3066\u3044\u307E\u3059\u3002
 active=\u6709\u52B9\uFF0F\u7121\u52B9
 actual_map_styles=\u30DE\u30C3\u30D7\u7528\u6761\u4EF6\u5BFE\u5FDC\u30CE\u30FC\u30C9\u30B9\u30BF\u30A4\u30EB\u3092\u8A2D\u5B9A
 actual_node_styles=\u30CE\u30FC\u30C9\u7528\u6761\u4EF6\u5BFE\u5FDC\u30CE\u30FC\u30C9\u30B9\u30BF\u30A4\u30EB\u3092\u8A2D\u5B9A
@@ -463,7 +463,7 @@ FormatPaste.text=\u66F8\u5F0F\u306E\u307F\u8CBC\u308A\u4ED8\u3051
 FormatPaste.tooltip=\u30CE\u30FC\u30C9\u306E\u66F8\u5F0F\u3060\u3051\u3092\u8CBC\u308A\u4ED8\u3051\u307E\u3059\u3002
 formats_not_loaded=\u66F8\u5F0F\u3092\u8AAD\u307F\u8FBC\u3080\u3053\u3068\u304C\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002\u30D5\u30A1\u30A4\u30EB\u304C\u58CA\u308C\u3066\u3044\u307E\u3059\u3002
 formula.error.attributeValueIsNull=\u8A08\u7B97\u5F0F\u5B9F\u884C\u5F8C\u306E\u5C5E\u6027\u5024 ''{0}'' \u306F\u7A7A\u5024\u3067\u3059\u3002
-formula.error.circularReference=\u5FAA\u74B0\u53C2\u7167\uFF1A\u30CE\u30FC\u30C9 "{0}" \u306E\u8A08\u7B97\u5F0F\u306F\u3001\u81EA\u5DF1\u306E\u5024\u3092\u53C2\u7167\u3057\u3066\u3044\u307E\u3059\u3002.
+formula.error.circularReference=\u5FAA\u74B0\u53C2\u7167\uFF1A\u30CE\u30FC\u30C9 ''{0}'' \u306E\u8A08\u7B97\u5F0F\u306F\u3001\u81EA\u5DF1\u306E\u5024\u3092\u53C2\u7167\u3057\u3066\u3044\u307E\u3059\u3002
 formula.EvaluateAllAction.text=\u3059\u3079\u3066\u306E\u8A08\u7B97\u5F0F\u3092\u5B9F\u884C
 formula.EvaluateAllAction.tooltip=\u7DE8\u96C6\u4E2D\u306E\u30DE\u30C3\u30D7\u306E\u3059\u3079\u3066\u306E\u8A08\u7B97\u5F0F\u3092\u5B9F\u884C\u3057\u307E\u3059\u3002
 formula.menuname=\u8A08\u7B97\u5F0F
