--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -46,7 +46,6 @@ addons.installer.canceled=Installation abgebrochen
 addons.installer.confirm.licence=<html><body><h1>Lizenz:</h1>{0}<p><p><em>Akzeptieren Sie die Lizenzbedingungen?</em></p></body></html>
 addons.installer.failed=Installation fehlgeschlagen: {0}
 addons.installer.freeplaneversion.format.error=Formatfehler in {0} (Wert: {1})
-addons.installer.groovy.script.name=Der Skript-Name {0} endet nicht auf ".groovy"
 addons.installer.html.script=Skripttext darf nicht HTML-formatiert sein
 addons.installer.install=Installieren
 addons.installer.invalid.keyboard.shortcut=Ung\u00FCltiges Tastaturk\u00FCrzel {0}.
@@ -60,6 +59,7 @@ addons.installer.no.scripts=Keine Skripte definiert
 addons.installer.no.zipdata=es wurden keine ZIP-Daten gefunden
 addons.installer.nonstandard.permissions=Das Skript ben\u00F6tigt die folgenden Berechtigungen, die zz. nicht gesetzt sind: {0}.\nSollen diese zu den Standardberechtigungen hinzugef\u00FCgt werden?
 addons.installer.one.child.expected=erwartet wurde nur EIN Unterknoten {0}, allerdings existiert {1}
+addons.installer.script.name.suffix=Der Skript-Name {0} hat keine Dateiendung wie z.B. ".groovy"
 addons.installer.script.no.execution_mode=f\u00FCr {0} ist das Attribut "execution_mode" nicht definiert
 addons.installer.script.no.menulocation=f\u00FCr {0} ist das Attribut "menuLocation" nicht definiert
 addons.installer.script.no.menutitle=f\u00FCr {0} ist das Attribut "menuTitleKey" nicht definiert
@@ -1047,6 +1047,7 @@ OptionPanel.language=Sprache
 OptionPanel.language.tooltip=<html>Dies ist die Sprache, die im Programm verwendet wird. 'Automatisch' bedeutet, dass die Sprache des Benutzers geladen wird, soweit vorhanden.</html>
 OptionPanel.last=Am Ende
 OptionPanel.last_opened_list_length=Anzahl der zuletzt ge\u00F6ffneten Dateien unter Datei -> Zuletzt ge\u00F6ffnete Dateien
+OptionPanel.latex_macros=Gemeinsame LaTeX-Makros
 OptionPanel.layout_map_on_text_change=Mindmap w\u00E4hrend des Bearbeitens aktualisieren
 OptionPanel.layout_map_on_text_change.tooltip=F\u00FCr h\u00F6here Geschwindigkeit ausschalten
 OptionPanel.linear=Linear
@@ -1139,10 +1140,14 @@ OptionPanel.ru=Russisch / \u0420\u0443\u0441\u0441\u043A\u0438\u0439 \u044F\u043
 OptionPanel.save_folding=Faltung speichern
 OptionPanel.save_folding_if_map_is_changed=Wenn Mindmap ver\u00E4ndert wurde
 OptionPanel.save_modification_times=\u00C4nderungszeiten speichern
-OptionPanel.script_classpath=Skripte Klassenpfad: Verzeichnisse, die Klassen und/oder JARs enthalten (siehe Tooltip)
+OptionPanel.script_cache_compiled_scripts=Zwischenspeicherung von kompilierten Skripten
+OptionPanel.script_cache_compiled_scripts.tooltip=<html>Skripte werden normalerweise nur einmal w\u00E4hrend<br>der Laufzeit Freeplanes kompiliert. Deaktivieren,<br>um bei jeder Ausf\u00FChrung zu kompilieren.</html>
+OptionPanel.script_classpath=Skripte Klassenpfad: Verzeichnisse, die Klassen und/oder JARs enthalten
 OptionPanel.script_classpath.tooltip=<html>Eine Liste von JARs und/oder Verzeichnissen, die zum Klassenpfad der Skripte/Formeln hinzugef\u00FCgt wird. <br> Verwenden Sie ";" (Windows) oder ":" (Linux, Mac), um die Eintr\u00E4ge der Liste voneinander zu trennen.<br>Verzeichnisse werden nach JAR- und .class-Dateien durchsucht.<br>Relative Pfade werden als relativ zum Freeplane Benutzerverzeichnis angesehen.<br> Wenn Sie den Klassenpfad angeben, muss er lesbar sein.</html>
-OptionPanel.script_directories=Suchpfad f\u00FCr Skripte (s. Tooltip)
-OptionPanel.script_directories.tooltip=<html>Eine Liste von Verzeichnissen.<br>Verwende ";"(Windows) oder ":" (Linux, Mac) um die Eintr\u00E4ge voneinander zu trennen.<br>Relative Pfadangaben beziehen sich auf das Freeplane Benutzerverzeichnis.</html>
+OptionPanel.script_compilation_disabled_extensions=Dateiendungen, f\u00FCr die nicht kompiliert werden soll.
+OptionPanel.script_compilation_disabled_extensions.tooltip=<html>Wenn alle Skripte einer zus\u00E4tzlich installierten Sprache<br>(au\u00DFer Groovy und JavaScript) grunds\u00E4tzliche Kompilationsfehler<br>haben, kann das Hinzuf\u00FCgen der Dateiendung hier helfen<br>(kommaseparierte Liste).</html>
+OptionPanel.script_directories=Suchpfad f\u00FCr Skripte
+OptionPanel.script_directories.tooltip=<html>Eine Liste von Skript-Verzeichnissen (zus\u00E4tzlich zu "scripts").<br>Verwende ";"(Windows) oder ":" (Linux, Mac) um die Eintr\u00E4ge voneinander zu trennen.<br>Relative Pfadangaben beziehen sich auf das Freeplane Benutzerverzeichnis.</html>
 OptionPanel.script_user_key_name_for_signing=Optionaler Aliasname eines private Schl\u00FCssels, um Skripte zu signieren
 OptionPanel.script_user_key_name_for_signing.tooltip=<html>Wenn Sie Ihre Skripte selbst signieren wollen, dann geben Sie hier einen Alias f\u00FCr den Schl\u00FCssel ein.<br>Es wird erwartet, dass der Schl\u00FCssel im Standard-Schl\u00FCsselspeicher ist.<br>Das geheime Passwort des Schl\u00FCssels muss mit dem Passwort des Schl\u00FCsselspeichers \u00FCbereinstimmen.</html>
 OptionPanel.scrollbar_increment=Geschwindigkeit
@@ -1181,6 +1186,7 @@ OptionPanel.separator.initial_map_size=Anf\u00E4ngliche Gr\u00F6\u00DFe der Mind
 OptionPanel.separator.inline_editor=Texteingabe im Knoten
 OptionPanel.separator.key_typing=Tastatureingabe
 OptionPanel.separator.language=Sprache
+OptionPanel.separator.latex=LaTeX
 OptionPanel.separator.load=Laden
 OptionPanel.separator.look_and_feel=Look And Feel
 OptionPanel.separator.mouse_wheel=Mausrad
