--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -13,7 +13,7 @@ accessories/plugins/EncryptNode.properties_5=Rappel : le niveau de protection re
 accessories/plugins/EncryptNode.properties_6=Valider
 accessories/plugins/EncryptNode.properties_7=Annuler
 accessories/plugins/EncryptNode.properties_insert_encrypted_node_first=Vous pouvez uniquement basculer le status de protection d'un n\u0153ud. Pour cr\u00E9er une carte prot\u00E9g\u00E9e utilisez le menu "Fichier".
-accessories/plugins/EncryptNode.properties_select_me=Nouvelle carte prot\u00E9g\u00E9e
+accessories/plugins/EncryptNode.properties_select_me=Nouvelle carte prot\u00E9g\u00E9e!
 accessories/plugins/EncryptNode.properties_wrong_password=Le mot de passe est incorrect.
 accessories/plugins/ExportWithTWiki.text=TWiki
 accessories/plugins/ExportWithTWiki.tooltip=Exporte la carte en document TWiki.
@@ -812,7 +812,7 @@ NewerFileRevisionsFoundDialog.open.tooltip=Ouvrir le fichier m\u00EAme si ce n'e
 NewerFileRevisionsFoundDialog.question=Il existe des versions plus r\u00E9centes de {0} !
 NewerFileRevisionsFoundDialog.restore=Restaurer
 NewerFileRevisionsFoundDialog.restore.tooltip=Remplacer {0} par {1}
-NewerFileRevisionsFoundDialog.title=Une version plus r\u00E9cente du fichier a \u00E9t\u00E9 trouv\u00E9e
+NewerFileRevisionsFoundDialog.title=Une version plus r\u00E9cente du fichier a \u00E9t\u00E9 trouv\u00E9e!
 NewFreeNodeAction.text=N\u0153ud libre
 NewLevelStyleAction.text=Cr\u00E9er un style automatique de niveau
 newmap.install.addon.question={0} semble \u00EAtre un add-on.\nSouhaitez-vous l''installer ?\n(R\u00E9pondez "Non" pour ouvrir le fichier normalement)
@@ -1190,7 +1190,7 @@ OptionPanel.separator.other_defaults=Autres r\u00E9glages par d\u00E9faut
 OptionPanel.separator.others=Autres raccourcis clavier
 OptionPanel.separator.outline_view=Vue plan
 OptionPanel.separator.patterns=Mod\u00E8les
-OptionPanel.separator.RichTextEditor=\u00C9diteur de texte riche
+OptionPanel.separator.RichTextEditor=\u00C9diteur de texte riche 
 OptionPanel.separator.root_node_appearance=Apparence du n\u0153ud racine
 OptionPanel.separator.save=Enregistrement
 OptionPanel.separator.scripting=Scripts
