--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1049,6 +1049,9 @@ OptionPanel.language=Language
 OptionPanel.language.tooltip=<html>This is the language that should be used in the program. 'automatic' tries to load the current user's language. </html>
 OptionPanel.last=Last
 OptionPanel.last_opened_list_length=Last opened list length
+OptionPanel.latex_editor_font=Font for Syntax Highlighting Editor
+OptionPanel.latex_editor_font.tooltip=Use 'Dialog' or 'Monospaced' if you need unicode chars!
+OptionPanel.latex_editor_font_size=Font size for Syntax Highlighting Editor
 OptionPanel.latex_macros=Common LaTeX Macros
 OptionPanel.layout_map_on_text_change=Layout map during editing
 OptionPanel.layout_map_on_text_change.tooltip=Disable for better performance
