--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -179,7 +179,7 @@ ChangeConnectorArrowsAction.backward.text=Zur\u00fcck
 ChangeConnectorArrowsAction.both.text=Beide
 ChangeConnectorArrowsAction.forward.text=Vorw\u00e4rts
 ChangeConnectorArrowsAction.none.text=Keinen
-ChangeConnectorArrowsAction.text=\u00c4ndern der Pfeile des Konnektors
+ChangeConnectorArrowsAction.text=\u00c4ndern der Pfeile der Verbindung
 ChangeConnectorShapeAction.CUBIC_CURVE.text=&Kurve
 ChangeConnectorShapeAction.EDGE_LIKE.text=&Wie Knotenlinie
 ChangeConnectorShapeAction.LINE.text=&Gerade
@@ -208,12 +208,12 @@ ColorProperty.ResetColor=Farbe zur\u00fccksetzen
 combined=Kombiniert
 condition=Bedingung
 confirmation=Sicherheitsbest\u00e4tigung
-connector=Konnektor
-connector_arrows=Konnektor &Pfeile
-connector_label=Beschriftung des Konnektors
-connector_lines=Konnektor &Linien
-connector_shapes=Konnektor &Formen
-ConnectorColorAction.text=Farbe des Konnektors
+connector=Verbindung
+connector_arrows=Verbindung &Pfeile
+connector_label=Beschriftung der Verbindung
+connector_lines=Verbindung &Linien
+connector_shapes=Verbindung &Formen
+ConnectorColorAction.text=Farbe der Verbindung
 CopyAction.text=&Kopieren
 CopyAction.tooltip=Kopiert den markierten Knoten und seine Nachfolger
 CopyAttributes.text=Attribute kopieren
@@ -284,7 +284,7 @@ edit=&Bearbeiten
 edit.decision=HTML-Editor
 edit.edit_rich_text=Wollen Sie Formatierungen (fett, kursiv, etc.) benutzen?
 edit_details=Knotendetails bearbeiten...
-edit_end_label=<html>Konnektor<br/>Beschriftung</html>
+edit_end_label=<html>Verbindung<br/>Beschriftung</html>
 edit_label_font_family=Schriftart
 edit_label_font_size=Schriftgr\u00f6\u00dfe
 edit_link_manually=Link Manuell bearbeiten...
@@ -1257,10 +1257,10 @@ OptionPanel.standardcloudestyle=Standard Wolkenstil
 OptionPanel.standardcloudestyle.tooltip=<html>Legt den Standard Wolkenstil fest.<br>Im Moment wird nur die geschwungene Form (Bezier)unterst\u00fctzt.</html>
 OptionPanel.standarddrawrectangleforselection=Selektierten Knoten durch Rechteck anzeigen
 OptionPanel.standarddrawrectangleforselection.tooltip=<html>Zeigt den selektierten Knoten an, indem ein Rechteck um ihn gezeichnet wird.</html>
-OptionPanel.standardlinkcolor=Standard Konnektor-Farbe
-OptionPanel.standardlinkcolor.tooltip=<html>Legt die Standardfarbe des Konnektors fest (in HTML-Notation). </html>
-OptionPanel.standardlinkestyle=Standard Konnektor-Stil
-OptionPanel.standardlinkestyle.tooltip=<html>Legt den Standardstil f\u00fcr den Konnektor fest. </html>
+OptionPanel.standardlinkcolor=Standard Verbindung-Farbe
+OptionPanel.standardlinkcolor.tooltip=<html>Legt die Standardfarbe der Verbindung fest (in HTML-Notation). </html>
+OptionPanel.standardlinkestyle=Standard Verbindung-Stil
+OptionPanel.standardlinkestyle.tooltip=<html>Legt den Standardstil f\u00fcr die Verbindung fest. </html>
 OptionPanel.standardselectednodecolor=Standard-Farbe f\u00fcr ausgew\u00e4hlte Knoten
 OptionPanel.standardselectednodecolor.tooltip=<html>Legt die Standardfarbe f\u00fcr selektierte Knoten fest (in HTML-Notation).<br>Gilt nur, wenn die Option "Selektierten Knoten durch Rechteck anzeigen"<br><b>nicht</b> selektiert ist.</html>
 OptionPanel.standardselectednoderectanglecolor=Farbe f\u00fcr das Rechteck zur Anzeige des ausgew\u00e4hlten Knoten
@@ -1410,7 +1410,7 @@ really_remove_node=Knoten wirklich l\u00f6schen?
 really_remove_notes=Wollen Sie wirklich die Notizen l\u00f6schen?
 ReapplyFilterAction.text=E&rneut anwenden
 red=Rot
-RedefineStyleAction.text=Vorlage neu festlegen
+RedefineStyleAction.text=Stil neu festlegen
 RedoAction.text=&Wiederherstellen
 RedoFilterAction.text=&Wiederherstellen
 regular_expressions=Regul\u00e4re Ausdr\u00fccke
@@ -1419,7 +1419,7 @@ ReminderHookAction.tooltip=Entfernt eine Wiedervorlage.
 remove_file_from_list_on_error=Konnte Datei {0} nicht \u00f6ffnen. Soll sie aus der Liste der zuletzt ge\u00f6ffneten Dateien entfernt werden?
 remove_shortcut_question=Tastaturk\u00fcrzel ersetzen?
 RemoveAllIconsAction.text=L\u00f6sche &alle
-RemoveConnectorAction.text=Konnektor entfernen
+RemoveConnectorAction.text=Verbindung entfernen
 RemoveEncryption.text=Knotenpasswort &entfernen
 RemoveFormatAction.text=Format entfernen
 RemoveIcon_0_Action.text=L\u00f6sche &erstes
