--- a/freeplane/resources/translations/Resources_it.properties
+++ b/freeplane/resources/translations/Resources_it.properties
@@ -1,4 +1,4 @@
-about_text=Joerg Mueller's Freeplane\nRealizzazione di un'interfaccia uomo-macchina del concetto di "Mappatura Mentale".\nCopyright (C) 2000-2008 Joerg Mueller <joemuell@informatik.uni-freiburg.de>\nQuesto programma \u00E8 "Free Software" (GPL)\nSito: http://freeplane.sourceforge.net/\nVersion:
+about_text=Realizzazione di un'interfaccia uomo-macchina del concetto di "Mappatura Mentale"
 AboutAction.text=Informazioni su
 acceleratorPresets=Preset Tasti Rapidi
 accelerators_loading_error=Impossibile caricare acceleratori da {0}
@@ -670,7 +670,7 @@ LatexEditLatexAction.text=Modifica formula &LaTeX...
 LatexInsertLatexAction.text=Aggiungere formula &LaTeX...
 less_than_two_selected_nodes=Seleziona almeno due nodi per collegarli
 license=Licenza
-license_text=Freeplane - Un programma per creare e visualizzare Mappe mentali\nCopyright (C) 2000-2010  Joerg Mueller <joergmueller@bigfoot.com>\nVedere COPYING per  Dettagli\n\nThis program is free software; you can redistribute it and/or\nmodify it under the terms of the GNU General Public License\nas published by the Free Software Foundation; either version 2\nof the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,\nbut WITHOUT ANY WARRANTY; without even the implied warranty of\nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\nGNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License\nalong with this program; if not, write to the Free Software\nFoundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 link_error=Errato collegamento "{0}" non caricato
 link_not_available_any_more=Il collegamento non \u00E8 pi\u00F9 valido. Il nodo \u00E8 stato cancellato nel frattempo.
 link_not_found=Collegamento {0} non trovato.
