--- a/freeplane/resources/translations/Resources_nl.properties
+++ b/freeplane/resources/translations/Resources_nl.properties
@@ -1,4 +1,4 @@
-about_text=Freeplane van Joerg Mueller\nEen programma voor het maken en bekijken van mindmaps.\nCopyright (C) 2000-2004 Joerg Mueller\nDeze software is gratis (GPL)\nHome: http://freeplane.sourceforge.net/\nVersion:
+about_text=Een programma voor het maken en bekijken van mindmaps.
 AboutAction.text=Over Freeplane
 acceleratorPresets=Sneltoetsenset
 accelerators_loading_error=Kan de sneltoetsen niet laden uit {0}
@@ -670,7 +670,7 @@ LatexEditLatexAction.text=Bewerken formule (LaTeX)...
 LatexInsertLatexAction.text=Toevoegen formule (LaTeX)...
 less_than_two_selected_nodes=Je moet minstens twee knopen selecteren om een snelkoppeling te maken.
 license=Licentie
-license_text=Freeplane - Een programma om Mindmaps te maken en te bekijken\nCopyright (C) 2000-2010  Joerg Mueller <joergmueller@bigfoot.com>\nBekijk COPYING voor details\n\nDit programma is gratis software; U kunt het opnieuw distribueren en- of\naanpassen onder de voorwaarden van de GNU General Public License\nzoals gepubliceerd door de Free Software Foundation; versie 2\nvan de licentie, of (naar eigen keuze) een latere versie.\n\nDit programma is verstrekt in de hoop dat het bruikbaar is ,\nmaar zonder enige garantie te geven over de\nverhandelbaarheid of geschiktheid voor een specifiek doel. Zie de \nGNU General Public License voor meer details.\n\nU moet een kopie van de GNU General Public License\nhebben ontvangen bij dit programma; Als dat niet zo is, schrijf naar de Free Software\nFoundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+license_text=<html>Dit programma is gratis software; U kunt het opnieuw distribueren en- of<br>aanpassen onder de voorwaarden van de GNU General Public License<br>zoals gepubliceerd door de Free Software Foundation; versie 2<br>van de licentie, of (naar eigen keuze) een latere versie.<br><br>Dit programma is verstrekt in de hoop dat het bruikbaar is ,<br>maar zonder enige garantie te geven over de<br>verhandelbaarheid of geschiktheid voor een specifiek doel. Zie de <br>GNU General Public License voor meer details.<br><br>U moet een kopie van de GNU General Public License<br>hebben ontvangen bij dit programma; Als dat niet zo is, schrijf naar de Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 link_error=Onjuiste koppeling "{0}" niet geopend
 link_not_available_any_more=De koppeling werkt niet meer. De knoop is ondertussen verwijderd.
 link_not_found=Koppeling {0} niet gevonden.
