--- a/freeplane/resources/translations/Resources_pl.properties
+++ b/freeplane/resources/translations/Resources_pl.properties
@@ -638,7 +638,7 @@ LatexEditLatexAction.text=Edytuj formu\u0142\u0119 LaTeX-u...
 LatexInsertLatexAction.text=Wstaw formu\u0142\u0119 LaTeX-u...
 less_than_two_selected_nodes=Wybierz co najmniej dwa w\u0119z\u0142y, aby utworzy\u0107 po\u0142\u0105czenie.
 license=Licencja
-license_text=Freeplane - Program do tworzenia i przegl\u0105dania map pami\u0119ci
+license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 LicenseAction.text=Licencja
 link_error=Nieprawid\u0142owy odno\u015bnik "{0}" nie za\u0142adowany
 link_not_available_any_more=Po\u0142\u0105czenie jest nieaktualne. Jeden z w\u0119z\u0142\u00F3w zosta\u0142 usuni\u0119ty.
