--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -669,7 +669,7 @@ LatexEditLatexAction.text=\u7de8\u8f2f LaTeX \u6578\u5b78\u5f0f
 LatexInsertLatexAction.text=\u65b0\u589e LaTeX \u6578\u5b78\u5f0f
 less_than_two_selected_nodes=\u4f60\u5fc5\u9808\u81f3\u5c11\u9078\u53d6\u5169\u500b\u7bc0\u9ede\u4f86\u5efa\u7acb\u9023\u7d50.
 license=\u6388\u6b0a: GPL 2 or later
-license_text=<html>Freeplane - \u5fc3\u667a\u5716\u5efa\u7acb\u548c\u89c0\u770b\u7a0b\u5f0f<br>\u4e2d\u6587\u5316 1.2.4 \u7248<br>\u4e2d\u6587\u5316\u4f5c\u8005\uff1aCharles Chang<br>http://www.charles-chang.com
+license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 link_error=\u932f\u8aa4\u7684\u9023\u7d50 "{0}" \u672a\u8f09\u5165
 link_not_available_any_more=\u9023\u7d50\u4e0d\u518d\u9069\u7528, \u7bc0\u9ede\u5df2\u88ab\u522a\u9664.
 link_not_found=\u627e\u4e0d\u5230\u9023\u7d50 {0}
